// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add new items -2 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "Musashi",
      "price": 50,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "Essentialism",
  },
]
`;

exports[`can add new items 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "Essentialism",
      "price": 50,
    },
  ],
}
`;

exports[`can add new items 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Musashi",
        "price": 50,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Essentialism",
        "price": 50,
      },
    ],
  },
]
`;
